--- a/image-tagging-tool/requirements.txt
+++ b/image-tagging-tool/requirements.txt
@@ -1,7 +1,9 @@
-certifi 
+autocomplete==0.0.104
+bottle==0.12.21
 click==8.1.3
 colorama==0.4.5
 DateTime==4.5
+fast-autocomplete==0.9.0
 fire==0.4.0
 Flask==2.1.2
 Flask-Cors==3.0.10
@@ -9,6 +11,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 Pillow==9.2.0
+python-Levenshtein==0.12.2
 pytz==2022.1
 six==1.16.0
 termcolor==1.1.0
